--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Louvrea
 APP_ENV=local
 APP_KEY=base64:LVFZD3U8YRlRzf0r+3ciqOK6ytw6+gskRbZAvYrylYc=
 APP_DEBUG=true
-APP_URL=https://louvrea.uloy.dev
+APP_URL=http://louvrea.openmind.id
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
