--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,7 @@ APP_NAME=Louvrea
 APP_ENV=local
 APP_KEY=base64:LVFZD3U8YRlRzf0r+3ciqOK6ytw6+gskRbZAvYrylYc=
 APP_DEBUG=true
-APP_URL=http://louvrea.openmind.id
+APP_URL=https://louvrea-jabodetabek.shop
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
