--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,39 +1,48 @@
-version: '3'
+version: "3.7"
 services:
   app:
     build:
+      args:
+        user: uloydev
+        uid: 1000
       context: ./
-    volumes:
-      - .:/var/www/html
-      - .env.prod:/var/www/html/.env
-    ports:
-      - "80:80"
-    environment:
-      - APP_ENV=local
-      - APP_DEBUG=true
-    networks:
-      - laravel
+      dockerfile: Dockerfile
+    image: louvrea
+    container_name: louvrea-app
+    restart: unless-stopped
+    working_dir: /var/www/
     depends_on:
-      - mysql    
-  mysql:
-      image: 'mysql/mysql-server:8.0'
-      environment:
-        MYSQL_ROOT_HOST: "%"
-        MYSQL_ROOT_PASSWORD: "root"
-        MYSQL_USER: "louvrea"
-        MYSQL_PASSWORD: "louvrea"
-        MYSQL_DATABASE: "louvrea"
-        MYSQL_ALLOW_EMPTY_PASSWORD: 1
-      ports:
-        - 3906:3306
-      volumes:
-        - 'mysql8:/var/lib/mysql'
-        - './db/louvrea.sql:/docker-entrypoint-initdb.d/01init.sql'
-      networks:
-        - laravel
-networks:
-    laravel:
-        driver: bridge
+      - mariadb
+    volumes:
+      - ./:/var/www
+    networks:
+      - louvrea
+  nginx:
+    image: nginx:1.17-alpine
+    container_name: louvrea-nginx
+    restart: unless-stopped
+    ports:
+      - 80:80
+    volumes:
+      - ./:/var/www
+      - ./docker/nginx:/etc/nginx/conf.d
+    networks:
+      - louvrea
+  mariadb:
+        image: mariadb:latest
+        environment:
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: louvrea
+            MYSQL_USER: louvrea
+            MYSQL_PASSWORD: louvrea
+        networks:
+            - louvrea
+        restart: on-failure
+        volumes:
+            - ./db:/docker-entrypoint-initdb.d
+            - databaseVolume:/var/lib/mysql
 volumes:
-    mysql8:
-        driver: local
+    databaseVolume:
+networks:
+  louvrea:
+    driver: bridge
