fix: pma config

--- a/docker/nginx/phpmyadmin.louvrea-jabodetabek.shop.conf
+++ b/docker/nginx/phpmyadmin.louvrea-jabodetabek.shop.conf
@@ -3,7 +3,7 @@ server {
     server_name phpmyadmin.louvrea-jabodetabek.shop; # Replace with your domain or server name
 
     location / {
-        proxy_pass phpmyadmin:80; # Replace with the appropriate PHPMyAdmin server and port
+        proxy_pass http://phpmyadmin:80; # Replace with the appropriate PHPMyAdmin server and port
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
